// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.not.toMatchRight() fails when regular expression matches a string on the right 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toMatchRight([22m[32mrightMatch[39m[2m)[22m

Expected Either not to match right:
  [31m/a/[39m

Received right:
  [31m\\"aa\\"[39m"
`;

exports[`.not.toMatchRight() fails when spec deeply matches the object on the right 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toMatchRight([22m[32mrightMatch[39m[2m)[22m

Expected Either not to match right:
  [31m{\\"b\\": {\\"c\\": 2}}[39m

Received right:
  [31m{\\"a\\": 1, \\"b\\": {\\"c\\": 2, \\"d\\": 3}}[39m"
`;

exports[`.not.toMatchRight() fails when spec matches the object on the right 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toMatchRight([22m[32mrightMatch[39m[2m)[22m

Expected Either not to match right:
  [31m{\\"a\\": 1}[39m

Received right:
  [31m{\\"a\\": 1, \\"b\\": 2}[39m"
`;

exports[`.toMatchRight() fails when object is a left 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchRight([22m[32mrightMatch[39m[2m)[22m

Expected Either to match right:
  [31m{\\"a\\": 1}[39m

Received left."
`;

exports[`.toMatchRight() fails when regular expression does not match a string on the right 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchRight([22m[32mrightMatch[39m[2m)[22m

Expected Either to match right:
  [31m/b/[39m

Received right:
  [31m\\"aa\\"[39m"
`;

exports[`.toMatchRight() fails when spec does not match the object on the left 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toMatchRight([22m[32mrightMatch[39m[2m)[22m

Expected Either to match right:
  [31m{\\"a\\": 2}[39m

Received right:
  [31m{\\"a\\": 1}[39m"
`;
